<resources>
    <string name="app_name">罗美集司机端</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chengke">乘客评价</string>
    <string name="menu_orderlist">订单记录</string>
    <string name="menu_moeny">我的钱包</string>
    <string name="menu_kefu">联系客服</string>
    <string name="menu_outlogin">退出登录</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="bindbank_name">请输入持卡人姓名</string>
    <string name="bindbank_idnumber">请输入持卡人身份证号</string>
    <string name="bindbank_banknumber">请输入银行卡号码</string>
    <string name="bindbank_bankname">请输入开户行</string>

</resources>
